samples/_failures_safe/1761169253_e609b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4bee4a56.c: In function ‘main’:
./samples/SAFE/__tmp_4bee4a56.c:153:5: error: expected declaration or statement at end of input
  153 |     if (fgets(buffer, sizeof(buffer), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_4bee4a56.c:153:5: error: expected declaration or statement at end of input
